Project Second Initial Commit

--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -127,9 +127,9 @@
           <div class="form-group col-9">
             <label for="gender">Gender</label>
             <select id="gender" class="form-control">
-              <option value="1">Female</option>
-              <option value="2">Male</option>
-              <option value="3">Prefer not to say</option>
+              <option value="{{gernderType.Female}}">Female</option>
+              <option value="{{gernderType.Male}}">Male</option>
+              <option value="{{gernderType.PreferNotToSay}}">Prefer not to say</option>
             </select>
           </div>
           <div class="form-group col-12 ">
@@ -204,7 +204,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <!-- <footer class="footer text-center">
     <div class="container">
       <div class="row">
         <div class="col-md-12 mb-12">
@@ -212,34 +212,34 @@
           <ul class="list-inline mb-0">
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="">
-                <i class="fa fa-fw fa-facebook"></i>
+                <i class="fas fa-facebook"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="">
-                <i class="fa fa-fw fa-google-plus"></i>
+                <i class="fas fa-fw fa-google-plus"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="">
-                <i class="fa fa-fw fa-twitter"></i>
+                <i class="fas fa-fw fa-twitter"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="">
-                <i class="fa fa-fw fa-linkedin"></i>
+                <i class="fas fa-fw fa-linkedin"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="">
-                <i class="fa fa-fw fa-dribbble"></i>
+                <i class="fas fa-fw fa-dribbble"></i>
               </a>
             </li>
           </ul>
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <div class="copyright py-4 text-center text-white">
     <div class="container">
