--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,53 +1,59 @@
-<body class="skin-green sidebar-mini" style="height: auto; min-height: 100%;">
+<body class="skin-green sidebar-mini" style="height: auto; min-height: 100%;" (window:resize)="onResize($event)">
   <div class="wrapper" style="height: auto; min-height: 100%;">
     <header class="main-header">
-      <a href="#" class="logo">
-        <span class="logo-mini whosnext-text" >WN</span>
-        <span class="logo-lg whosnext-text" >Who's Next</span>
+      <a href="/home/treats" class="logo" [@sideBarWidth]="sideBarCollopse">
+        <!-- <span class="logo-mini whosnext-text">WN</span> -->
+        <span class="logo-lg whosnext-text">{{logo}}</span>
       </a>
+      <nav class="navbar navbar-static-top" [@paddingWidth]="sideBarCollopse">
+        <a style="cursor: pointer;" (click)="menuBarClicked()"><i class="fas fa-bars"></i></a>
+      </nav>
     </header>
 
-    <aside class="main-sidebar">
-
+    <aside class="main-sidebar" [@sideBarWidth]="sideBarCollopse">
       <section class="sidebar">
-
-        <div class="user-panel">
+        <div class="user-panel pointer" (click)="showProfileMenu = !showProfileMenu">
           <div class="pull-left image">
             <img src="src/assets/img/user2-160x160.jpg" class="img-circle" alt="User Image">
           </div>
-          <div class="pull-left info">
+          <div class="pull-left info" *ngIf="sideBarCollopse" [@fadeInOut]>
             <p>Md Muidul Alam</p>
             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
           </div>
         </div>
+        <ul *ngIf="showProfileMenu" class="sidebar-menu tree" data-widget="tree" [@fadeInOutProfileMenu]>
+          <li class="pointer" [ngClass] = "{ 'active' : profileActive }" (click)="onSidebarItemClick('profile')"><a routerLink="profile"><i class="fas fa-user" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Profile</span></a></li>
+          <li class="pointer"><a (click)="logOutUser()"><i class="fas fa-sign-out-alt" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Log out</span></a></li>
+        </ul>
 
-        <!-- <form action="#" method="get" class="sidebar-form">
+        <form *ngIf="sideBarCollopse" action="#" method="get" class="sidebar-form">
           <div class="input-group">
             <input type="text" name="q" class="form-control" placeholder="Search...">
             <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
+              <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
+              </button>
+            </span>
           </div>
-        </form> -->
+        </form> 
 
         <ul class="sidebar-menu tree" data-widget="tree">
-          <li class="active"><a href="#"><i class="fa fa-cutlery"></i> <span>Treats</span></a></li>
-          <li><a href="#"><i class="fa fa-plus"></i> <span>Ask Treat</span></a></li>
-          <li><a href="#"><i class="fa fa-check-square"></i> <span>Pending Treats</span></a></li>
-          <li><a href="#"><i class="fa fa-history"></i> <span>Treat History</span></a></li>
+          <li class="pointer" [ngClass] = "{ 'active' : treatsActive }" (click)="onSidebarItemClick('treats')"><a routerLink="treats"><i class="fas fa-utensils" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Treats</span></a></li>
+          <li class="pointer" [ngClass] = "{ 'active' : askTreatActive }" (click)="onSidebarItemClick('asktreat')"><a routerLink="asktreat"><i class="fas fa-plus" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Ask Treat</span></a></li>
+          <li class="pointer" [ngClass] = "{ 'active' : treatrequestsActive }" (click)="onSidebarItemClick('treatrequests')"><a routerLink="treatrequests"><i class="fas fa-check-square" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Treat Requests</span></a></li>
+          <li class="pointer" [ngClass] = "{ 'active' : treatHistoryActive }" (click)="onSidebarItemClick('treathistory')"><a routerLink="treathistory"><i class="fas fa-history" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Treat History</span></a></li>
+          <li class="pointer" [ngClass] = "{ 'active' : trashActive }" (click)="onSidebarItemClick('trash')"><a routerLink="trash"><i class="fas fa-trash-alt" [@sideBarIconanimation]="sideBarCollopse"></i> <span *ngIf="sideBarCollopse" [@fadeInOut]> Trash</span></a></li>
         </ul>
       </section>
     </aside>
 
-    <div class="content-wrapper" style="min-height: 100vh;">
+    <div class="content-wrapper wh-body" [@paddingWidth]="sideBarCollopse">
+      <router-outlet></router-outlet>
     </div>
 
-    <footer class="main-footer">
-      <div class="pull-right hidden-xs">
-        Developed By Md Muidul Alam 
+    <footer class="main-footer" [@paddingWidth]="sideBarCollopse">
+      <div class="row">
+          <strong>Copyright © 2018 <a href="#">Company</a>.</strong> All rights reserved.
       </div>
-      <strong>Copyright © 2018 <a href="#">Company</a>.</strong> All rights reserved.
     </footer>
 
   </div>
