--- a/src/app/components/home/treatrequests/treatrequests.component.html
+++ b/src/app/components/home/treatrequests/treatrequests.component.html
@@ -1,71 +1,135 @@
 <div style="padding-top: 10px;">
-    <div class="col-lg-8 col-sm-12">
-        <div class="box box-success">
+  <div class="col-lg-8 col-sm-12">
+    <div class="box box-success">
+      <div class="box-body">
+        <h2 class="box-title">
+          <i class="fas fa-check-square"></i> Treat Requests
+        </h2>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-8 col-sm-12">
+    <div *ngFor="let treatRequest of treatRequests">
+      <div
+        *ngIf="
+          treatRequest.Confirmation == treatStage.Confirmed &&
+          treatRequest.showNotification
+        "
+        @fadeInOut
+      >
+        <div class="alert alert-success">
+          <a class="close" (click)="treatRequest.showNotification = false"
+            >&times;</a
+          >
+          <i class="fas fa-concierge-bell"></i> Treat Confirmed. Date:
+          {{ treatRequest.Deadline | date: "EEEE, d MMM, y" }}
+        </div>
+      </div>
+      <div
+        *ngIf="
+          treatRequest.Confirmation == treatStage.Trashed &&
+          treatRequest.showNotification
+        "
+        @fadeInOut
+      >
+        <div class="alert alert-danger">
+          <a class="close" (click)="treatRequest.showNotification = false"
+            >&times;</a
+          >
+          <i class="fas fa-trash-alt"></i> Treat Moved to Trash.
+        </div>
+      </div>
+      <div
+        *ngIf="treatRequest.Confirmation == treatStage.Waiting"
+        @fadeInOut
+        class="box"
+        [ngClass]="{
+          'box-success': userId != treatRequest.AskedTo,
+          'box-warning': userId == treatRequest.AskedTo
+        }"
+      >
+        <div class="box-body">
+          <div class="row form-group">
+            <div class="col-10">
+              <h3>
+                <i
+                  *ngIf="userId == treatRequest.AskedTo"
+                  class="fas fa-concierge-bell"
+                ></i
+                ><i
+                  *ngIf="userId != treatRequest.AskedTo"
+                  class="fas fa-gift"
+                ></i>
+                {{ treatRequest.Heading }}
+              </h3>
+            </div>
+            <div class="col-2">
+              <div class="row">
+                <div class="col-8 hidden"></div>
+                <div class="col-4">
+                  <div class="dropdown">
+                    <a class="dropbtn text-center"
+                      ><i class="fas fa-ellipsis-v half-opacity"></i
+                    ></a>
+                    <div class="dropdown-content">
+                      <a (click)="onTreatMovetoTrashClick(treatRequest.Id)"
+                        ><i class="fas fa-trash-alt"></i> Move to Trash</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="box box-group">
             <div class="box-body">
-                <h2 class="box-title"> <i class="fas fa-check-square"></i> Treat Requests</h2>
+              <h4 *ngIf="userId != treatRequest.AskedTo" class="normal-text">
+                {{ treatRequest.AskedToName }}
+              </h4>
+              <h4 *ngIf="userId != treatRequest.AskedBy" class="normal-text">
+                {{ treatRequest.AskedByName }}
+              </h4>
             </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-lg-8 col-sm-12">
+              <p for="reason">Reason</p>
+              <h6>{{ treatRequest.Reason }}</h6>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+              <p for="deadline">Deadline</p>
+              <h6>{{ treatRequest.Deadline | date: "EEEE, d MMM, y" }}</h6>
+            </div>
+          </div>
+          <div *ngIf="userId == treatRequest.AskedTo" class="row form-group">
+            <div class="col-12">
+              <button
+                class="btn btn-warning"
+                (click)="
+                  treatRequest.showConfirmationSpinner = true;
+                  onConfirmationClick(treatRequest.id)
+                "
+              >
+                <i
+                  class="fa fa-spinner fa-spin"
+                  *ngIf="treatRequest.showConfirmationSpinner"
+                ></i>
+                Confirm
+              </button>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="col-lg-8 col-sm-12">
-        <div *ngFor="let treatRequest of treatRequests">
-            <div *ngIf="treatRequest.confirmation == treatStage.Confirmed && treatRequest.showNotification" @fadeInOut>
-                <div class="alert alert-success" >
-                    <a class="close" (click)="treatRequest.showNotification = false;">&times;</a>
-                    <i class="fas fa-concierge-bell"></i> Treat Confirmed. Date: {{treatRequest.deadline | date: 'EEEE, d MMM, y'}}
-                </div>
-            </div>
-            <div *ngIf="treatRequest.confirmation == treatStage.Trashed && treatRequest.showNotification" @fadeInOut>
-                <div class="alert alert-danger" >
-                    <a class="close" (click)="treatRequest.showNotification = false;">&times;</a>
-                    <i class="fas fa-trash-alt"></i> Treat Moved to Trash.
-                </div>
-            </div>
-            <div *ngIf="treatRequest.confirmation == treatStage.Waiting" @fadeInOut class="box" [ngClass]="{'box-success' : userId != treatRequest.askedTo, 'box-warning' : userId == treatRequest.askedTo}">
-                <div class="box-body">
-                    <div class="row form-group">
-                        <div class="col-10">
-                            <h3><i *ngIf="userId == treatRequest.askedTo" class="fas fa-concierge-bell"></i><i *ngIf="userId != treatRequest.askedTo" class="fas fa-gift"></i> {{treatRequest.heading}}</h3>
-                        </div>
-                        <div class="col-2">
-                            <div class="row">
-                                <div class="col-8 hidden"></div>
-                                <div class="col-4">
-                                    <div class="dropdown">
-                                        <a class="dropbtn text-center"><i class="fas fa-ellipsis-v half-opacity"></i></a>
-                                        <div class="dropdown-content">
-                                            <a (click)="onTreatMovetoTrashClick(treatRequest.id)"><i class="fas fa-trash-alt"></i> Move to Trash</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box box-group">
-                        <div class="box-body">
-                            <h4 *ngIf="userId != treatRequest.askedTo" class="normal-text">{{treatRequest.askedToName}}</h4>
-                            <h4 *ngIf="userId != treatRequest.askedBy" class="normal-text">{{treatRequest.askedByName}}</h4>
-                        </div>
-                    </div>
-                    <div class="row form-group">
-                        <div class="col-lg-8 col-sm-12">
-                            <p for="reason">Reason</p>
-                            <h6>{{treatRequest.reason}}</h6>
-                        </div>
-                        <div class="col-lg-4 col-sm-12">
-                            <p for="deadline">Deadline</p>
-                            <h6>{{treatRequest.deadline | date: 'EEEE, d MMM, y'}}</h6>
-                        </div>
-                    </div>
-                    <div *ngIf="userId == treatRequest.askedTo" class="row form-group">
-                        <div class="col-12">
-                            <button class="btn btn-warning" (click)="treatRequest.showConfirmationSpinner = true; onConfirmationClick(treatRequest.id)"><i class="fa fa-spinner fa-spin" *ngIf="treatRequest.showConfirmationSpinner"></i> Confirm</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="showmore d-flex justify-content-center" >
-            <button class="btn btn-success" *ngIf="showShowMore" @fadeInOut (click)="onClickShowMore()">Show more</button>
-        </div>
+    <div class="showmore d-flex justify-content-center">
+      <button
+        class="btn btn-success"
+        *ngIf="showShowMore"
+        @fadeInOut
+        (click)="onClickShowMore()"
+      >
+        Show more
+      </button>
     </div>
+  </div>
 </div>
