--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
       <section class="sidebar">
         <div class="user-panel pointer" (click)="showProfileMenu = !showProfileMenu">
           <div class="pull-left image">
-            <img src="src/assets/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+            <img src="../../../assets/img/user2-160x160.jpg" class="img-circle" alt="User Image">
           </div>
           <div class="pull-left info" *ngIf="sideBarCollopse" [@fadeInOut]>
             <p>Md Muidul Alam</p>
